[metadata]
name = pyvmsq
version = 0.1.0
description = Simple Python library for querying Valve's principal servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cetteup/pyvmsq
project_urls =
    Bug Tracker = https://github.com/cetteup/pyvmsq/issues
author = cetteup
author_email = me@cetteup.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = pyvmsq
python_requires = >=3.8
